After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684243 - Scroll events are not delivered correctly
Scroll events are not delivered correctly
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-17 18:39 UTC by Giovanni Campagna
Modified: 2013-01-11 17:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
EphyWindow: don't connect to scroll-event on the web view (2.45 KB, patch)
2012-10-07 17:21 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-09-17 18:39:33 UTC
In recent epiphany builds I noticed that after the page is opened for some time, scroll events are not delivered to the element below the pointer, but to some other, that appears to have some kind of grab.
Recently it has become 100% reproducible with Facebook's sidebar, but it happened also with GMail.

I'm not sure which version first had this behavior. It is an epiphany specific issue, though, as I tested GtkLauncher without problems.

Epiphany version: 3.5.91.1-6-gf8539f3, with webkit 1.
Comment 1 Giovanni Campagna 2012-10-07 17:21:24 UTC
Created attachment 225993 [details] [review]
EphyWindow: don't connect to scroll-event on the web view

Doing so prevents the correct delivery of scroll DOM events,
and at time causes the wrong part of the page to scroll (or
none at all).
Comment 2 Xan Lopez 2012-10-07 21:21:11 UTC
So, a couple of things without thinking too hard about this:

- This code has been there for a long time, so if the breakage it's recent it cannot be this.

- What the comment means with handler is the default handler (as in, setting the vmethod), not a signal handler, so I guess if we remove this we should just get rid of the comment.
Comment 3 Giovanni Campagna 2012-10-08 17:25:29 UTC
I'm sure this used to work, but it's just that, well, epiphany without correct scrolling is just unusable, and this fixed the problem.
The actual bug is somewhere between WebKit and gtk3, I suppose, but forgive me if I can bisect something that takes more than 1 hour to build...

Up to you, of course, to find a better patch.
Comment 4 Xan Lopez 2012-10-08 17:32:46 UTC
Can you tell me how to reproduce this with GMail?
Comment 5 Giovanni Campagna 2012-10-08 17:44:13 UTC
For me, simply scrolling the label sidebar is broken without the patch, and after some usage (going into messages and back) all scrolling is frozen.
Comment 6 Xan Lopez 2012-10-08 17:47:41 UTC
That's weird, I use gmail every day with ephy, cannot reproduce that. Maybe some underlying bug in X or something that this triggers? I'm still using Fedora 16.
Comment 7 Giovanni Campagna 2012-10-08 18:06:47 UTC
Uhm... Are you using ephy 3.6 in Fedora 16? Is that even possible?

Anyway, Fedora 18 + jhbuild here. gtk3-3.6.0-57-g1a1361c, libX11-1.5.0-3.fc18.x86_64, libXi-1.6.1-2.fc18.x86_64, xorg-x11-server-Xorg-1.13.0-5.fc18.x86_64, xorg-x11-drv-evdev-2.7.3-1.fc18.x86_64.
xinput test-xi2 shows correct behaviour for mouse wheel events, so if the bug is below webkitgtk3, it's probably in gtk.

(When ephy started supporting WK2 I switched to that, up until not long ago, so I don't remember if F17 had this problem. Before WK2 I remember it working fine)
Comment 8 Giovanni Campagna 2013-01-10 21:39:46 UTC
Any chance this could be looked at?
It's really making epiphany unusable in gnome-ostree (webkitgtk 1.11.2 tarball, everything else master).
Comment 9 Xan Lopez 2013-01-11 16:36:07 UTC
(In reply to comment #8)
> Any chance this could be looked at?
> It's really making epiphany unusable in gnome-ostree (webkitgtk 1.11.2 tarball,
> everything else master).

I'd say for now you can push this (but just completely remove the FIXME comment, since it makes no sense without the code itself), since the feature this implements is somewhat questionable and it's apparently causing problems. If people complain we'll see if we can reimplement it properly.
Comment 10 Giovanni Campagna 2013-01-11 17:47:17 UTC
Attachment 225993 [details] pushed as 2c9fc0f - EphyWindow: don't connect to scroll-event on the web view