EphyWindow: don't connect to scroll-event on the web view

Doing so prevents the correct delivery of scroll DOM events,
and at time causes the wrong part of the page to scroll (or
none at all).

https://bugzilla.gnome.org/show_bug.cgi?id=684243